--- a/style.css
+++ b/style.css
@@ -1,19 +1,7 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif;
-}
-body {
-   background-color:rgb(21, 27, 197);
-}
-
-
-
-.div {
+ .div {
     font-size: 12px;
     background-color: rgb(180, 29, 170);
-    width: 450vw;
+    width: 400vw;
     max-width: 100em;
     position: absolute;
     transform: translate(-50%, -50%);
@@ -22,11 +10,11 @@ body {
     padding: 2em;
     border-radius: 0.6em;
     box-shadow: 0 1.2em 2.4em rgba(111, 85, 0, 0.25);
-}
+} 
 options-div {
     text-align: center;
 } 
-options-div div {
+.html {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -52,33 +40,6 @@ options-div button.active {
     color:azure;
 
 }
-.letter-div {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 0.6em;
-}
-.letter-div button {
-    height: 2.4em;
-    width: 2.4em;
-    border-radius: 0.3em;
-    background-color: azure;
-    cursor: pointer;
-}
-.new-game-popup {
-    background-color: white;
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    border-radius: 0.6em;
-}
 user-input-section {
     display: flex;
     justify-content: center;
@@ -86,37 +47,15 @@ user-input-section {
     margin: 0.6em 0 1.2 0;
 }
 canvas {
-    display: block;
+    display: inline-block;
     margin: auto;
-    border: 10px solid #8c52ff;
-    border-radius: 10px;
+    border: 4px solid #8c52ff;
+    border-radius: 5px;
 }
-.hide {
-    display: none;
-}
-result-text h2 {
-    font-size: 1.8em;
-    text-align: center;
-}
-result-text p {
-    font-size: 1.25em;
-    margin: 1em 0 2em 0;
-}
-result-text span {
-    font-weight: 600;
-}
-new-game-button {
-    font-size: 1.25em;
-    padding: 0.5 1em;
-    background-color: #8c52ff;
-    border: 3px solid #000000;
-    color: azure;
-    border-radius: 0.2em;
-    cursor: pointer;
-}
+
 .win-msg {
     color: aquamarine;
 }
 .lose-msg {
     color: blueviolet;
-}
+} 
